# MyProjectBlockChain

./: README.md
BlockChainSignDiploma/: .gitignore
BlockChainSignDiploma/backend/: .env.example  .gitignore  alembic.ini
BlockChainSignDiploma/backend/alembic/: env.py
BlockChainSignDiploma/backend/app/: main.py
BlockChainSignDiploma/backend/custom_curve_signature/: curve.py  field.py  hash.py  rfc6979.py  serialize.py  sign.py
BlockChainSignDiploma/frontend/: package-lock.json  package.json
BlockChainSignDiploma/frontend/src/: App.css  App.js
LibraryCustomCurveSignature/: GETTING_STARTED.md  Untitled-1.ipynb  pyproject.toml
LibraryCustomCurveSignature/custom_curve_signature/: __init__.py  keygen.py  point.py  verify.py
chaincode/: go.mod  smartcontract.go  tnm5224.go
go-custom-curve/: go.mod  main.go
go-custom-curve/crypto/: ecdsa.go  rfc6979.go
go-custom-curve/curve/: params.go  point.go
organizations/fabric-ca/ordererOrg/: fabric-ca-server.db  tls-cert.pem
organizations/fabric-ca/org1/: IssuerRevocationPublicKey  fabric-ca-client-config.yaml  fabric-ca-server.db  tls-cert.pem
organizations/fabric-ca/org2/: fabric-ca-client-config.yaml  fabric-ca-server.db  tls-cert.pem
organizations/ordererOrganizations/example.com/: fabric-ca-client-config.yaml
organizations/peerOrganizations/org1.example.com/: connection-org1.json  connection-org1.yaml  fabric-ca-client-config.yaml
organizations/peerOrganizations/org2.example.com/: connection-org2.json  connection-org2.yaml  fabric-ca-client-config.yaml
(+211 files in other folders)
